# render-django

./: .gitignore  README.md  build.sh  pyproject.toml
mysite/: settings.py
render/templates/render/: index.html
